--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -8,6 +8,7 @@
     <link href="css/ionicMain.css" rel="stylesheet">
     <script src="js/ionic.bundle.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" charset="utf-8" src="GCMPlugin.js"></script>
     <script src="js/ionicMain.js"></script>
   </head>
 
