Added time interval for availability, and cleaned up the availability functionality

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -126,7 +126,7 @@
                 on-refresh="refreshFriendsList()">
               </ion-refresher>
               <ion-list can-swipe="true">
-                <div id="emptyRListItem" ng-if="friendsList.length==0">
+                <div id="emptyFListItem" ng-if="friendsList.length==0">
                   <i class="icon ion-sad"></i><br><br>
                   <div>No Friends</div>
                 </div>
