--- a/correlater/www/start.html
+++ b/correlater/www/start.html
@@ -18,12 +18,10 @@
     <script type="text/javascript" charset="utf-8" src="js/start.js"></script>
 </head>
 <body>
-    <div data-role="page">
-        <div id="navBar" data-role="header" class="primary-3">
-            <h1 id="title">Corral</h1>
-        </div>
+    <div data-role="page" class="cityBG">
         <div data-role="content">
-            <h1>Welcome to Corral!</h1>
+            <h1 class="channel">Corral!</h1>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
             <button id="addAccButton" class="ui-btn ui-corner-all ui-btn ui-shadow">
                 Add Account
             </button>
