--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -8,7 +8,7 @@
     <link href="css/ionicMain.css" rel="stylesheet">
     <script src="js/ionic.bundle.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" charset="utf-8" src="GCMPlugin.js"></script>
+    <script type="text/javascript" charset="utf-8" src="js/GCMPlugin.js"></script>
     <script src="js/ionicMain.js"></script>
   </head>
 
@@ -86,9 +86,7 @@
                 on-refresh="refreshRequestsList()">
               </ion-refresher>
               <ion-list>
-                <div id="emptyRListItem" ng-if="requestsList.length==0">
-                  <i class="icon ion-sad"></i><br><br>
-                  <div>No Friend Requests</div>
+                <div id="emptyRListItem" class="noRequestsBG" ng-if="requestsList.length==0">&nbsp;
                 </div>
                 <ion-item class="requestTile Trench" ng-repeat="friend in requestsList" item="friend">
                   {{friend.first_name}} {{friend.last_name}}
@@ -110,9 +108,7 @@
                 on-refresh="refreshNudges()">
               </ion-refresher>
               <ion-list>
-                <div id="emptyNListItem" ng-if="nudgesList.length==0">
-                  <i class="icon ion-sad"></i><br><br>
-                  <div>No Nudges</div>
+                <div id="emptyNListItem" class="noNudgesBG"ng-if="nudgesList.length==0">&nbsp;
                 </div>
                 <ion-item class="nudgeTile Trench" ng-repeat="friend in nudgesList" item="friend">
                   {{friend.first_name}} {{friend.last_name}}
@@ -127,9 +123,7 @@
                 on-refresh="refreshFriendsList()">
               </ion-refresher>
               <ion-list can-swipe="true">
-                <div id="emptyFListItem" ng-if="friendsList.length==0">
-                  <i class="icon ion-sad"></i><br><br>
-                  <div>No Friends</div>
+                <div id="emptyFListItem" class="noFriendsBG" ng-if="friendsList.length==0">&nbsp;
                 </div>
                 <ion-item class="friendTile Trench" 
                   ng-if="friend.first_name.toLowerCase().indexOf(getSearchFriend().toLowerCase())>=0 || friend.last_name.toLowerCase().indexOf(getSearchFriend().toLowerCase())>=0" 
@@ -158,9 +152,7 @@
             on-refresh="refreshMyInfo(); refreshFriendsNow();">
           </ion-refresher>
           <ion-list>
-            <div id="emptyNowItem" ng-if="friendsNow.length==0">
-              <i class="icon ion-sad"></i><br><br>
-              <div>No Available Friends</div>
+            <div id="emptyNowItem" class="noAvailBG" ng-if="friendsNow.length==0">&nbsp;
             </div>
             <ion-item id="{{'friend'+nowFriend.id}}" ng-class="{true: 'assertive', false: ''}[nowFriend.favorite==1]" class="nowTile Trench" ng-click="clickFriendNow('friend'+nowFriend.id); listResize();" ng-repeat="nowFriend in friendsNow"  item="nowFriend">
               <span class="item-note Trench" ng-if="!isActiveNow('friend'+nowFriend.id)">
