--- a/correlater/www/addAccount.html
+++ b/correlater/www/addAccount.html
@@ -19,13 +19,10 @@
 </head>
 <body>
     <div class="cityBG" data-role="page">
-        <div id="navBar" data-role="header" class="primary-3">
-            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-nodisc-icon" data-rel="back"></a>
-            <h1 id="title">Add Account</h1>
-        </div>
         <div data-role="content">
+			  <h1 class="channel">Create Account!</h1>
               <p id="feedBack">&nbsp;</p>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <div id="accountButtons">
               <button id="googleLogin" class="ui-btn ui-corner-all ui-btn ui-shadow failed">
                   Create with Google
               </button>
@@ -35,6 +32,7 @@
               <button id="nativeCreate" class="ui-btn ui-corner-all ui-btn ui-shadow">
                   Create Corral Account
               </button>
+			</div>
         </div>
     </div>
 </body>
