Changed CSS for Invite, login, and create pages
added background to login/create account pages, adjusted css on invite
page to match rest of app, added placeholder text on email input on
invite page.

--- a/correlater/www/invite.html
+++ b/correlater/www/invite.html
@@ -27,7 +27,7 @@
         <div data-role="content">
           <form method="post" id="search" data-role="none">
               <label for="email">Search by Email:</label>
-              <input type="email" name="email" id="email">
+              <input type="email" name="email" id="email" placeholder="example@corral.com">
               <input type="submit" id="submit" value="Search">
           </form>
           <ul data-role="listview" data-inset="true" data-icon="plus"></ul>
