--- a/correlater/www/nativeCreate.html
+++ b/correlater/www/nativeCreate.html
@@ -19,12 +19,9 @@
     <script type="text/javascript" charset="utf-8" src="js/createNative.js"></script>
 </head>
 <body>
-    <div data-role="page">
-        <div id="navBar" data-role="header" class="primary-3" data-position="fixed">
-            <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-nodisc-icon" data-rel="back"></a>
-            <h1 id="title">Create Account</h1>
-        </div>
+    <div data-role="page" class="blankBG">
         <div data-role="content">
+			<h1 class="channel">Create an Account!</h1>
             <!-- first name, last name, email, password, verify password,  -->
             <form method="post" id="create" name="form">
                 <label for="first_name">First Name:</label>
