--- a/correlater/www/start.html
+++ b/correlater/www/start.html
@@ -21,14 +21,15 @@
     <div data-role="page" class="cityBG">
         <div data-role="content">
             <h1 class="channel">Corral!</h1>
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <button id="addAccButton" class="ui-btn ui-corner-all ui-btn ui-shadow">
-                Add Account
-            </button>
-            <button id="signIn" class="ui-btn ui-corner-all ui-btn ui-shadow">
-                Sign In
-            </button>
-            <p id="feedBack"></p>
+            <div id="startPageButtons">
+				<button id="addAccButton" class="ui-btn ui-corner-all ui-btn ui-shadow">
+					Add Account
+				</button>
+				<button id="signIn" class="ui-btn ui-corner-all ui-btn ui-shadow">
+					Sign In
+				</button>
+				<p id="feedBack"></p>
+			</div>
         </div>
     </div>
 </body>
