- Change Start Sign in button from Add Account to Create Account - Hid the forget password on nativeSign - Removed old files

--- a/correlater/www/start.html
+++ b/correlater/www/start.html
@@ -23,7 +23,7 @@
             <h1 class="channel">Corral!</h1>
             <div id="startPageButtons">
 				<button id="addAccButton" class="ui-btn ui-corner-all ui-btn ui-shadow">
-					Add Account
+					Create Account
 				</button>
 				<button id="signIn" class="ui-btn ui-corner-all ui-btn ui-shadow">
 					Sign In
