--- a/correlater/www/nativeSignIn.html
+++ b/correlater/www/nativeSignIn.html
@@ -31,7 +31,7 @@
 					<input type="password" name="password" id="password" value="" autocomplete="off">
 					<input type="submit" name="submit" value="Submit">
 				</form>
-				<div>
+				<div style="display:none;">
 					<a id="forgotPW">Forget your password?</a>
 				</div>
 				<p id="feedBack"></p>
