--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -26,7 +26,7 @@
           </ion-nav-buttons>
           <ion-nav-buttons side="right">
             <div class="badge badge-assertive toggleBadge" ng-if="requestsList.length!=0 || nudgesList.length!=0">!</div>
-            <button class="button button-icon button-clear ion-person-stalker" ng-click="refreshRequestsList(); refreshFriendsList(); toggleRight(); refreshMyInfo();"></button>
+            <button class="button button-icon button-clear ion-person-stalker" ng-click="refreshRequestsList(); refreshNudgesList(); refreshFriendsList(); toggleRight(); refreshMyInfo();"></button>
           </ion-nav-buttons>
           <ion-nav-view animation="no-animation" name="menuContent"></ion-nav-view>
         </ion-side-menu-content>
@@ -61,7 +61,7 @@
             </div>
             <div class="buttons">
               <div class="badge badge-assertive nudgeBadge" ng-if="nudgesList.length!=0">{{nudgessList.length}}</div>
-              <button class="navButton button-icon icon ion-chatbubbles" ng-class="{true: 'energized', false: 'stable'}[getRightMenu()=='nudges']" ng-click="refreshNudges(); showNudges();">&nbsp;Nudges
+              <button class="navButton button-icon icon ion-chatbubbles" ng-class="{true: 'energized', false: 'stable'}[getRightMenu()=='nudges']" ng-click="refreshNudgesList(); showNudges();">&nbsp;Nudges
               </button>
             </div>
             <div class="buttons">
@@ -108,7 +108,7 @@
                 disable-pulling-rotation="true"
                 pulling-icon="ion-load-c"
                 refreshing-icon="ion-loading-c"
-                on-refresh="refreshNudges()">
+                on-refresh="refreshNudgesList()">
               </ion-refresher>
               <ion-list>
                 <div id="emptyNListItem" class="noNudgesBG"ng-if="nudgesList.length==0">
@@ -117,7 +117,10 @@
                 </div>
                 </div>
                 <ion-item class="nudgeTile Trench" ng-repeat="friend in nudgesList" item="friend">
-                  {{friend.first_name}} {{friend.last_name}}
+                  {{first_name}} {{last_name}}
+                  <p class="Trench">
+                    {{message}}
+                  </p>
                 </ion-item>
               </ion-list>
             </div>
@@ -175,7 +178,7 @@
                 <button class="button icon ion-chatbubble button-clear button-outline button-balanced" ng-click="nudgeFriend(nowFriend)"></button>
               </span>
               {{nowFriend.first_name}} {{nowFriend.last_name}}
-              <p class="Trench" ng-if="isActiveNow('friend'+nowFriend.id)" ng-animate="">
+              <p class="Trench" ng-if="isActiveNow('friend'+nowFriend.id)">
                 {{nowFriend.mood}}
               </p>
             </ion-item>
