Nudges are now working!

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -110,7 +110,7 @@
                 refreshing-icon="ion-loading-c"
                 on-refresh="refreshNudgesList()">
               </ion-refresher>
-              <ion-list>
+              <ion-list can-swipe="true">
                 <div id="emptyNListItem" class="noNudgesBG"ng-if="nudgesList.length==0">
                 <div class="emptyItemContainer">
                   <p class="trench">No Nudges</p>
@@ -121,10 +121,14 @@
                     <i class="timeLeft icon ion-ios7-clock-outline"></i>
                     hh:mm
                   </span>
-                  {{nudges.first_name}} {{nudges.last_name}}
+                  <h2>From: {{nudges.first_name}} {{nudges.last_name}}</h2>
                   <p class="Trench">
                     {{nudges.message}}
                   </p>
+                  <ion-option-button ng-click="removeNudge(nudges);">
+                    Mark<br>
+                    Seen
+                  </ion-option-button>
                 </ion-item>
               </ion-list>
             </div>
