--- a/correlater/www/inviteFromPhone.html
+++ b/correlater/www/inviteFromPhone.html
@@ -22,7 +22,7 @@
     <div data-role="page">
         <div id="navBar" data-role="header" class="primary-3">
             <a href="#" id="back" class="navItem ui-btn ui-icon-carat-l ui-btn-icon-notext ui-nodisc-icon" data-rel="back"></a>
-            <h1 id="title">Invite a Friend</h1>
+            <h1 id="title">Invite Friends</h1>
         </div>
         <div data-role="content">
             <ul data-role="listview" data-filter="true" data-filter-placeholder="Search contacts..." data-inset="true" data-icon="plus"></ul>
