Notifications are working...
but they show up every time new nudges are polled for. Need to change
to when only new nudges come up.

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -7,6 +7,7 @@
     <link href="css/ionic.css" rel="stylesheet">
     <link href="css/ionicMain.css" rel="stylesheet">
     <script src="js/ionic.bundle.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/jquery/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" charset="utf-8" src="js/GCMPlugin.js"></script>
     <script src="js/ionicMain.js"></script>
