Fixed the last list item of the friends now list from being blocked by the footer (when the list reaches the bottom of the page

--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -160,8 +160,8 @@
     </script>
 
     <script id="templates/home.html" type="text/ng-template">
-      <ion-view title="Corral">
-        <ion-content class="mainContent">
+      <ion-view title="Corral" class="mainContent">
+        <ion-content class="mainContainer">
           <ion-refresher
             disable-pulling-rotation="true"
             pulling-icon="ion-load-c"
