--- a/correlater/www/main.html
+++ b/correlater/www/main.html
@@ -40,16 +40,15 @@
           <ion-content class="content slideMenu">
             <ul class="list">
               <a class="item item-icon-left assertive menuTile" href=""><i class="icon ion-person"></i>Profile</a>
-              <a class="item item-icon-left menuTile assertive" href=""><i class="icon ion-android-mixer"></i>Schedule</a>
-              <a class="item item-icon-left menuTile assertive" href=""><i class="icon ion-document-text"></i>Accounts</a>
               <a class="item item-icon-left menuTile" href="invite.html" menu-close><i class="icon ion-person-add"></i>Add Friends</a>
+              <a class="item item-icon-left menuTile" href="" ng-click="fbshare()" menu-close><i class="icon ion-android-share"></i>Share on Facebook</a>
               <a class="item item-icon-left menuTile" href="chooseCalendar.html" menu-close><i class="icon ion-ios7-calendar-outline"></i>Choose Calendar</a>
               <a class="item item-icon-left menuTile assertive"><i class="icon ion-information"></i>Tutorial</a>
               <a class="item item-icon-left menuTile assertive"><i class="icon ion-settings"></i>Settings</a>
               <a class="item item-icon-left menuTile" ng-click="logout()"><i class="icon ion-log-out"></i>Log Out</a>
             </ul>
             <div id='LeftMenuMessage' class="Trench">
-              Ver. 0.10.23.02.54
+              Ver. 0.12.03.16.21
             </div>
           </ion-content>
         </ion-side-menu>
